Correct minor errors