@@ -13,7 +13,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CandidatoService implements ICandidatoService {
@@ -69,7 +68,7 @@ public class CandidatoService implements ICandidatoService {
         return candidatoRepository.findAll()
                 .stream()
                 .map(candidatoMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
