@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class PartidoPoliticoService implements IPartidoPoliticoService {
@@ -59,7 +58,7 @@ public class PartidoPoliticoService implements IPartidoPoliticoService {
         return repository.findAll()
                 .stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
